--- a/client/index.html
+++ b/client/index.html
@@ -13,8 +13,7 @@
       <input id="fortuneSubmit" type="submit" value="Submit Fortune">
     </form>
       <br><br>
-    <label for="deleteOption">Choose an option to delete a random compliment or fortune.</label>
-    <button id="complimentDelete">Delete a compliment.</button>
+    <label for="deleteOption">Click to delete a fortune.</label>
     <button id="fortuneDelete">Delete a fortune.</button>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="main.js"></script>
