--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,8 @@
       <br><br>
     <label for="deleteOption">Click to delete a fortune.</label>
     <button id="fortuneDelete">Delete a fortune.</button>
+      <br><br>
+    <button id="fortuneEdit">Change your fortunes to uppercase.</button>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="main.js"></script>
     
